--- a/site/index.html
+++ b/site/index.html
@@ -8,5 +8,14 @@
 <body>
 <h1>Hello Coursera</h1>
 <h2> this is an edit test</h2>
+
+<!-- Division -->
+<div class="social">
+  <p>I may be found on...</p>
+  <p>Additionally, I have a profile on...</p>
+</div>
+
+<!-- Span -->
+<p>Soon we'll be <span class="tooltip">writing HTML</span> with the best of them.</p>
 </body>
 </html>
