--- a/site/index.html
+++ b/site/index.html
@@ -17,5 +17,14 @@
 
 <!-- Span -->
 <p>Soon we'll be <span class="tooltip">writing HTML</span> with the best of them.</p>
+
+
+<h1>Video</h1>
+<video src="BoxCar.MOV" width= "400">
+	Your browse does not support the <code>video</code>elment.
+</video>
+<br>
+<audio src="https://upload.wikimedia.org/wikipedia/commons/0/04/Pyotr_Ilycich_Tchaikovsky_1812_overture.ogg" controls>Pyotr Ilyich Tchaikovsky - 1812 overture</audio>
+<br>
 </body>
 </html>
