--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,7 @@
 <p>Soon we'll be <span class="tooltip">writing HTML</span> with the best of them.</p>
 
 <!-- Tables -->
-<table>
+<table><caption>This is a table</caption>
 	<tr><th>Col1</th><th>Col2</th><th>Col3</th></tr>
 	<tr><td>One</td><td>Two</td><td>Three</td></tr>
 	<tr><td>Four</td><td>Five</td><td>Six</td></tr>
