--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,14 @@
 	<tr><td>Seven</td><td>Eight</td><td>Nine</td></tr>
 </table>
 
-
+<h2>meter</h2>
+<p>The meter tag is cool and can take a lot of attributes.
+But again it is better if you have some code that can make 
+the attribute values dynamic instead of "hardcoding" them
+When you think of meter, think of a final score for a test</p>
+<meter min="0" max="100" value="50"></meter><br>
+<meter min="0" max="1" value=".25"></meter><br>
+<meter min="5" max="10" value="8"></meter><br>
 <br>
 </body>
 </html>
