--- a/site/index.html
+++ b/site/index.html
@@ -35,5 +35,11 @@ When you think of meter, think of a final score for a test</p>
 <meter min="0" max="1" value=".25"></meter><br>
 <meter min="5" max="10" value="8"></meter><br>
 <br>
+<h2>bdo</h2>
+<p>bdo stands for bidirectional overide. This tag can be 
+used to change the direction of the text. </p>
+<p>This text will go left to right
+<p><bdo dir="rtl">This text will go right to left. </bdo></p>p>
+
 </body>
 </html>
