--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@ When you think of meter, think of a final score for a test</p>
 <p>bdo stands for bidirectional overide. This tag can be 
 used to change the direction of the text. </p>
 <p>This text will go left to right
-<p><bdo dir="rtl">This text will go right to left. </bdo></p>p>
+<p><bdo dir="rtl">This text will go right to left. </bdo></p>
 
 </body>
 </html>
