--- a/site/index.html
+++ b/site/index.html
@@ -41,5 +41,14 @@ used to change the direction of the text. </p>
 <p>This text will go left to right
 <p><bdo dir="rtl">This text will go right to left. </bdo></p>
 
+
+<ol start="50" reversed >
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+
+<a href="mailto:chris.arnaud@me.com?subject=Hi&body=How are your">Email</a>
 </body>
 </html>
