--- a/site/index.html
+++ b/site/index.html
@@ -6,49 +6,9 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
-<h2> this is an edit test</h2>
-
-<!-- Division -->
-<div class="social">
-  <p>I may be found on...</p>
-  <p>Additionally, I have a profile on...</p>
-</div>
-
-<!-- Span -->
-<p>Soon we'll be <span class="tooltip">writing HTML</span> with the best of them.</p>
-
-<!-- Tables -->
-<table><caption>This is a table</caption>
-	<tr><th>Col1</th><th>Col2</th><th>Col3</th></tr>
-	<tr><td>One</td><td>Two</td><td>Three</td></tr>
-	<tr><td>Four</td><td>Five</td><td>Six</td></tr>
-	<tr><td>Seven</td><td>Eight</td><td>Nine</td></tr>
-</table>
-
-<h2>meter</h2>
-<p>The meter tag is cool and can take a lot of attributes.
-But again it is better if you have some code that can make 
-the attribute values dynamic instead of "hardcoding" them
-When you think of meter, think of a final score for a test</p>
-<meter min="0" max="100" value="50"></meter><br>
-<meter min="0" max="1" value=".25"></meter><br>
-<meter min="5" max="10" value="8"></meter><br>
-<br>
-<h2>bdo</h2>
-<p>bdo stands for bidirectional overide. This tag can be 
-used to change the direction of the text. </p>
-<p>This text will go left to right
-<p><bdo dir="rtl">This text will go right to left. </bdo></p>
+<h1>Hello Coursera, its a great course !</h1>
 
 
-<ol start="50" reversed >
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol>
 
-
-<a href="mailto:chris.arnaud@me.com?subject=Hi&body=How are your">Email</a>
 </body>
 </html>
